on-premises/k8s/airflow/extra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airflow
  annotations:
    cert-manager.io/cluster-issuer: spnw-intermediate-ca1-issuer
    cert-manager.io/common-name: "airflow.vm.world1l.worldl.xpt"
spec:
  ingressClassName: nginx
  rules:
    - host: airflow.vm.world1l.worldl.xpt
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: airflow-helm-web
                port:
                  number: 8080
    - host: worldl-airflow.worldb.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: airflow-helm-web
                port:
                  number: 8080
  tls:
    - hosts:
        - airflow.vm.world1l.worldl.xpt
      secretName: airflow-web-cert-secret
